refactor: migrate tex-repo to SPEC-first pipeline with enforced README invariants
- Refactored repository semantics to a SPEC-first structure:
  SPEC → FORMALISM → PROCESSES → APPLICATIONS → TESTBEDS
- Replaced legacy stage naming and rules with SPEC-centered constraints
- Enforced README.md presence at all required levels:
  - SPEC/
  - SPEC/spec/
  - every stage directory
  - every domain directory
  - every paper directory
- Prohibited papers directly under stage directories
  (SPEC/spec remains the sole allowed exception)
- Updated CLI commands (init, fix, status, nd, np, build) to:
  - create required directories and READMEs conservatively
  - never overwrite existing README files
- Updated tests, fixtures, and samples to reflect new structure
- All existing tests pass via tests/run_tests.py

This commit changes repository semantics but not Spec content.
Follow-up: run smoke tests on existing repos using the new rules.

--- a/tests/sample/expected_section_1.tex
+++ b/tests/sample/expected_section_1.tex
@@ -1,5 +1,5 @@
 \section{Section 1}
 
-Core notes for bootstrap.
+Spec notes for bootstrap.
 Use 100\% focus on clarity.
 Check symbols: a\_b and \{braces\}.
